# searcheval-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: regression.json
data/search_eval_small/: documents.jsonl  qrels.jsonl  queries.jsonl
docs/: architecture.md  project_summary.md
examples/: api_smoke_test.sh  compare_tfidf_bm25.sh  run_bm25.sh  run_hybrid.sh  run_tfidf.sh
searcheval/: __init__.py  api.py  cli.py
searcheval/benchmarks/: compare.py  runner.py  store.py
searcheval/datasets/: loader.py  schema.py  validator.py
searcheval/eval/: evaluator.py  failure_analysis.py  metrics.py
searcheval/regression/: config.py  detector.py
searcheval/reports/: markdown.py
searcheval/search/: base.py  bm25.py  factory.py  hybrid.py  tfidf.py
tests/: test_api.py  test_benchmark_compare.py  test_benchmark_runner.py  test_benchmark_store.py  test_bm25_search.py  test_cli.py  test_evaluator.py  test_failure_analysis.py  test_hybrid_search.py  test_markdown_report.py  test_metrics.py  test_regression_config.py  test_regression_detector.py  test_search_factory.py  test_tfidf_search.py
