[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "searcheval-lab"
version = "0.1.0"
description = "Evaluation and benchmarking infrastructure for search and retrieval systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Omprakash Sahani" }
]
keywords = [
    "search",
    "information-retrieval",
    "ml-systems",
    "benchmarking",
    "evaluation",
    "ranking-metrics",
    "reproducibility"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
searcheval = "searcheval.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["searcheval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]
